--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -1,10 +1,10 @@
 %% Thesis type: bachelor, master, doctoral
-\NewExpandableDocumentCommand{\ThesisType}{}{L2 ISTN}
+\NewExpandableDocumentCommand{\ThesisType}{}{Licence 3 EEEA}
 
 %% Thesis title (exactly as in the formal assignment)
-\NewExpandableDocumentCommand{\ThesisTitle}{}{Titre}
+\NewExpandableDocumentCommand{\ThesisTitle}{}{Outils mathématiques}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisTitle)
-\NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{Titre}
+\NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{Outils mathématiques}
 %% Thesis title (if custom formatting is needed for the title page, defauls to \ThesisTitle)
 \NewExpandableDocumentCommand{\ThesisTitleFront}{}{
     \ThesisTitle\\
@@ -12,7 +12,7 @@
 }
 
 %% Author of the thesis
-\NewExpandableDocumentCommand{\ThesisAuthor}{}{\textcolor{red}{Alex Videcoq}}
+\NewExpandableDocumentCommand{\ThesisAuthor}{}{Alex Videcoq}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisAuthor)
 \NewExpandableDocumentCommand{\ThesisAuthorPlaintext}{}{Alex Videcoq}
 
@@ -22,42 +22,46 @@
 % \NewDocumentCommand{\YearRevision}{}{2025}
 
 %% University
-\NewDocumentCommand{\University}{}{Univesite de Rennes}
+\NewDocumentCommand{\University}{}{Université de Rennes}
 
 %% Name of the department or institute, where the work was officially assigned
-%% (according to the Organizational Structure of MFF UK in English,
-%% or a full name of a department outside MFF)
-\NewDocumentCommand{\Department}{}{\textcolor{red}{ISTIC}}
+\NewDocumentCommand{\Department}{}{ISTIC}
 
 %% Is it a Department (katedra), or an Institute (ústav)?
 \NewDocumentCommand{\DeptType}{}{UFR}
 
 %% Thesis supervisor: name, surname and titles
-\NewDocumentCommand{\Supervisor}{}{\textcolor{red}{Prof. John Doe}}
+\NewDocumentCommand{\Supervisor}{}{Prof. John Doe}
 %% Thesis co-supervisor: name, surname and titles (uncomment if applicable)
 % \NewDocumentCommand{\CoSupervisor}{}{Prof. Matthieu Davy}
 
-%% Supervisor's department/institute (again according to Organizational structure of MFF)
-\NewDocumentCommand{\SupervisorsDepartment}{}{\textcolor{red}{ISTIC}}
+%% Supervisor's department/institute
+\NewDocumentCommand{\SupervisorsDepartment}{}{ISTIC}
 
 %% Study programme and specialization
-\NewDocumentCommand{\StudyProgramme}{}{\textcolor{red}{L2 ISTN}}
+\NewDocumentCommand{\StudyProgramme}{}{L3 EEEA}
 
 %% Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
 \NewDocumentCommand{\Abstract}{}{
-    Lorem Ipsum
+\NewDocumentCommand{\Abstract}{}{
+    Ce travail présente les notions fondamentales liées aux espaces vectoriels de fonctions,
+    à la définition des normes et des distances, ainsi qu’aux différents types de convergence
+    des suites de fonctions. Sont également abordés le rôle du produit scalaire, la norme
+    hermitienne et les propriétés des systèmes orthogonaux. L’accent est mis sur les définitions,
+    propriétés essentielles et exemples permettant d’illustrer ces concepts en analyse
+    fonctionnelle.
 }
-
+}
 %% Subject (short description for PDF metadata)
 \NewExpandableDocumentCommand{\Subject}{}{%
-    Lorem Ipsum
+    Analyse fonctionnelle et outils mathématiques pour espaces vectoriels
 }
 
 %% Keywords (about 3-7)
 \NewExpandableDocumentCommand{\Keywords}{}{%
-    \textcolor{red}{Mots, cles}
+    Espaces vectoriels, Normes, Convergence, Produit scalaire, Orthogonalité, Analyse fonctionnelle
 }
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \Keywords)
 \NewExpandableDocumentCommand{\KeywordsPlaintext}{}{%
-    Mots, cles
+    Espaces vectoriels, Normes, Convergence, Produit scalaire, Orthogonalité, Analyse fonctionnelle
 }
