finish norme/distance

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -1,9 +1,18 @@
-@BOOK{Gourdon2009,
+@BOOK{Gourdon-algebre,
   title     = "Alg{\`e}bre: Math{\'e}matiques pour {MP}",
   author    = "Gourdon, Xavier",
   publisher = "Ellipses-Marketing",
   month     =  jan,
   year      =  2009,
   address   = "Paris, France",
+  language  = "fr"
+}
+
+@BOOK{Gourdon-analyse,
+  title     = "Les maths en t{\^e}te. Analyse - 3e {\'e}dition",
+  author    = "Gourdon, Xavier",
+  publisher = "Editions Ellipses",
+  month     =  apr,
+  year      =  2020,
   language  = "fr"
 }
